# carefulsource

./: .gitignore  CMakeLists.txt  README.md  carefulsource.cpp  carefulsource.h  decoder_base.h  decoder_jpeg.cpp  decoder_jpeg.h  decoder_jpegli.cpp  decoder_jpegli.h  decoder_png.cpp  decoder_png.h  meson.build
.github/workflows/: build.yaml
